MAKE YOUR ORDER alignment fixes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,9 @@
         box-shadow: #000000 0px 0px 15px 2px;
         margin: 10px;
     }
+    .logo{
+        
+    }
 }
 
 @media only screen and (min-width: 768px) {
